fix image position, fix image overflow

--- a/css/theme-topic.css
+++ b/css/theme-topic.css
@@ -9,6 +9,7 @@
 
 .pstn-relative {
   position: relative !important;
+  overflow-x: hidden;
 }
 
 .mr-img {
